Fixed issue where the date widget was not showing the calendar icon (whereas the datetimecombo was0.

--- a/sugarcrm/styleguide/less/clients/base/components/record.less
+++ b/sugarcrm/styleguide/less/clients/base/components/record.less
@@ -511,6 +511,7 @@
       }
     }
 
+    &[data-type="date"],
     &[data-type="datetimecombo"],
     &[data-type="fieldset"] {
       .normal > span {
